<resources>
    <string name="app_name">Music App</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="account_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="username_text">Username</string>
    <string name="repeat_password_text">Repeat Password</string>
    <string name="sign_up_text_btn">Sign Up</string>
    <string name="already_account_text">Already have an account?</string>
    <string name="log_in_text">Log In</string>
    <string name="radio_musician">Musician</string>
    <string name="radio_audience">Audience</string>
    <string name="login_title">Log In</string>
    <string name="signup_title">Sign Up</string>
    <string name="profile_title">Profile Setup</string>
    <string name="home_title">MusicApp</string>
    <string name="email_field_error_text">Email field must not be blank</string>
    <string name="password_error_text">Password field must not be blank</string>
    <string name="valid_email_error">Error Signing up! Try again</string>
    <string name="login_error">Error logging in! Check your credentials and try again</string>
    <string name="username_error_text">Username name must not be blank</string>
    <string name="first_sign">You must Sign Up first before Log In!</string>
    <string name="forgot_password">forgot password?</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="send_email_reset_pas">Send Email</string>
    <string name="sending_email_text">Sending email...</string>
    <string name="email_reset_error">Error sending the email. Please check your email and try again</string>
    <string name="prof_pic">Click on the image to set up your profile pic</string>
    <string name="age">Age</string>
    <string name="phone_number_text">Phone number</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="set_up_profile_btn_text">Set Up Profile</string>
    <string name="age_error_text">Age must not be blank</string>
    <string name="phone_error_text">Phone number must not be blank</string>
    <string name="select_radio_error">Please ensure you have selected either of the radio buttons</string>
    <string name="prof_pic_error">Please select your profile picture</string>
    <string name="gender_error">Please select your gender</string>
    <string name="identity_error_text">Please select your title identity</string>
    <string name="video_upload">Click on the play button to upload a video</string>
    <string name="song_title">Song title</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_video_text">Uploading video...</string>
    <string name="song_title_error">Song title must not be blank</string>
    <string name="musician">Musicians</string>
    <string name="competition">Videos</string>
    <string name="videos_library">Competition</string>
    <string name="logout">Sign Out</string>
    <string name="upload_video_menu">Upload Video</string>
    <string name="competition_name">Competition name</string>
    <string name="manage_competitions">Manage Competitions</string>
</resources>
