<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_toolbar"
        android:background="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        
        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:elevation="12dp"-->
            <!--android:id="@+id/view2"-->
            <!--app:cardCornerRadius="30dp"-->
            <!--android:layout_gravity="center">-->

            <!--<ImageButton-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:id="@+id/prof_image"-->
                <!--android:layout_margin="10dp"-->
                <!--android:background="@drawable/prof"/>-->
        <!--</android.support.v7.widget.CardView>-->
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/prof_image"
            android:layout_width="96dp"
            android:layout_gravity="center"
            android:layout_height="96dp"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prof_pic"
            android:layout_marginStart="30dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_age"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/age_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/age"/>
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/radio_group"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_music"
                android:text="@string/radio_musician"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_aud"
                android:text="@string/radio_audience"/>

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number_text"/>
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group2"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_male"
                android:text="@string/male_text"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_female"
                android:text="@string/female_text"/>
        </RadioGroup>

        <Button
            android:id="@+id/set_prof_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/set_up_profile_btn_text"
            android:textColor="@android:color/white"/>
    </LinearLayout>



</LinearLayout>